kubernetes/wordpress-site1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-site1
  labels:
    app: wordpress-site1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-site1
  template:
    metadata:
      labels:
        app: wordpress-site1
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
