kubernetes/wordpress-site2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-site2
  labels:
    app: wordpress-site2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-site2
  template:
    metadata:
      labels:
        app: wordpress-site2
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
