kubernetes/wordpress-site1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-site1-service
spec:
  selector:
    app: wordpress-site1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
