kubernetes/wordpress-site2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-site2-service
spec:
  selector:
    app: wordpress-site2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
