kubernetes/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: fujairahfutureinnovations.com # Replace with your domain
      http:
        paths:
          - pathType: Prefix
            path: "/site1"
            backend:
              service:
                name: wordpress-site1-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/site2"
            backend:
              service:
                name: wordpress-site2-service
                port:
                  number: 80
